# Funding-Rate-Calculation-System

./: .env.backup  .env.example  .gitignore  Anchor.toml  Cargo.toml  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml
backend/: Cargo.toml  Dockerfile
backend/benches/: rate_aggregator_bench.rs
backend/src/: lib.rs  main.rs
backend/src/api/: mod.rs
backend/src/api/rest/: handlers.rs  routes.rs
backend/src/api/websocket/: streams.rs
backend/src/cache/: redis_client.rs
backend/src/config/: settings.rs
backend/src/database/: mod.rs  models.rs  repository.rs  schema.rs
backend/src/monitoring/: alerts.rs  metrics.rs  mod.rs
backend/src/services/: funding_calculator.rs  historical_manager.rs  mod.rs  oracle_manager.rs  payment_distributor.rs  rate_aggregator.rs
backend/src/solana/: client.rs  mod.rs
backend/src/types/: errors.rs  funding_rate.rs  mod.rs
backend/src/utils/: math.rs  time.rs
backend/tests/: funding_calculator_test.rs  math_test.rs  oracle_integration_test.rs  payment_flow_test.rs
config/: development.toml  production.toml  test.toml
docs/api/: rest-endpoints.md  websocket-streams.md
docs/architecture/: calculation-pipeline.md  data-flow.md  system-overview.md
docs/deployment/: local-setup.md
docs/formulas/: funding-rate-calculations.md
migrations/: 001_create_funding_rates.sql  002_create_funding_history.sql  003_create_payment_records.sql  004_create_oracle_prices.sql  005_create_metrics.sql
programs/funding-rate/: Cargo.toml
programs/funding-rate/src/: constants.rs  errors.rs  lib.rs
programs/funding-rate/src/instructions/: apply_hourly_funding.rs  initialize_funding_state.rs  mod.rs  update_funding_rate.rs
programs/funding-rate/src/state/: funding_history.rs  funding_rate_state.rs  mod.rs  position_funding.rs
programs/funding-rate/src/utils/: math.rs
scripts/: build.sh  clean.sh  deploy-program.sh  monitor.sh  seed-data.sh  setup.sh
tests/anchor/: funding-rate.ts
tests/integration/: funding_calculator_test.rs  oracle_integration_test.rs  payment_flow_test.rs
tests/unit/: math_test.rs  rate_calculation_test.rs
