[package]
name = "funding-rate-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
sqlx = { workspace = true, default-features = false, features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
redis = { workspace = true }
axum = { workspace = true, features = ["ws"] }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenv = { workspace = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Solana dependencies (commented out to avoid dependency conflicts - will add back later)
# solana-client = "2.0.20"
# solana-sdk = "2.0.20"
# anchor-client = "0.30.1"

# Additional dependencies
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tokio-tungstenite = "0.24"
futures = "0.3"
futures-util = "0.3"
dashmap = "6.1"
parking_lot = "0.12"
once_cell = "1.20"
config = "0.14"
uuid = { version = "1.11", features = ["v4", "serde"] }
rust_decimal = "1.37"
rust_decimal_macros = "1.37"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "rate_aggregator_bench"
harness = false

