[package]
name = "funding-rate"
version = "0.1.0"
edition = "2021"

[workspace]

[lib]
crate-type = ["cdylib", "lib"]
name = "funding_rate"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"

